[gd_scene load_steps=9 format=3 uid="uid://qpe3d3d5t3ha"]

[ext_resource type="Script" path="res://Scenes/Transistion System/prod_to_sales_button.gd" id="1_o7na6"]
[ext_resource type="Texture2D" uid="uid://ho3cqlkp8kan" path="res://Art/transistion_button_2.png" id="2_fvtuq"]
[ext_resource type="Texture2D" uid="uid://bqejfslisqmvc" path="res://Art/transistion_button_2_white.png" id="3_g5vuj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mabon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0k7m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x15pk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iw28q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkjxu"]

[node name="prod_to_sales_button" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7na6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_fvtuq")

[node name="activated_texture" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("3_g5vuj")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 500.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_mabon")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h0k7m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_x15pk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iw28q")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jkjxu")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
